<resources>
    <string name="app_name">Work time tracker</string>
    <string name="work_time_tracker">Work time tracker</string>
    <string name="history">History</string>
    <string name="add_manually">Add Manually</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="no_data_available">No data available</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_work_manually">Add work manually</string>
    <string name="start_time">Start time</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="done">Done</string>
    <string name="end_time">End time</string>
    <string name="starts_at">Starts at:</string>
    <string name="ends_at">Ends at:</string>
    <string name="long_click_to_delete">long click to delete</string>
</resources>