<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="arsenic.shaw.worktimetracker.mainScreeenFragment.MainScreenViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/theme_color_1"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.startAtText}"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Started at 9:00" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.liveTimer}"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="02:56:02" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@{viewModel.isWorkStarted ? @color/gray : @color/theme_color_2}"
                    android:enabled="@{!viewModel.isWorkStarted}"
                    android:onClick="@{() -> viewModel.startClicked()}"
                    android:text="@string/start"
                    android:textColor="@color/theme_color_1"
                    android:textStyle="bold"
                    app:cornerRadius="14dp"
                    app:layout_constraintEnd_toStartOf="@+id/materialButton2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:backgroundTint="@color/theme_color_2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton2"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@{viewModel.isWorkStarted ? @color/theme_color_2 : @color/gray}"
                    android:enabled="@{viewModel.isWorkStarted}"
                    android:onClick="@{() -> viewModel.endClicked()}"
                    android:text="@string/end"
                    android:textColor="@color/theme_color_1"
                    android:textStyle="bold"
                    app:cornerRadius="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/materialButton"
                    app:layout_constraintTop_toTopOf="@+id/materialButton"
                    tools:backgroundTint="@color/gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_manually_button"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/theme_color_2"
                    android:text="@string/add_manually"
                    android:textColor="@color/theme_color_1"
                    android:textStyle="bold"
                    app:cornerRadius="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialButton" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/history"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_manually_button" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:layout_marginTop="8dp"
                    android:text="@string/long_click_to_delete"
                    android:visibility="@{viewModel.allWorks.size()>0 ? View.VISIBLE : View.INVISIBLE}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/works_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:listAllWorks="@{viewModel.allWorks}"
                    app:reverseLayout="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data_available"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="@{viewModel.allWorks.size()>0 ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>