<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="arsenic.shaw.worktimetracker.addManuallyFragment.AddManuallyViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".addManuallyFragment.AddManuallyFragment">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/add_work_manually"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="@+id/back_button" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/start_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{viewModel.startDate}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/materialButton"
                app:layout_constraintStart_toStartOf="@+id/materialButton"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="02-09-2011" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{viewModel.startTime}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/materialButton2"
                app:layout_constraintStart_toStartOf="@+id/materialButton2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="09:31" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/theme_color_2"
                android:onClick="@{() -> viewModel.onStartDateChangeClick()}"
                android:text="@string/set_date"
                android:textColor="@color/theme_color_1"
                android:textStyle="bold"
                app:cornerRadius="14dp"
                app:layout_constraintEnd_toStartOf="@+id/materialButton2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton2"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/theme_color_2"
                android:onClick="@{() -> viewModel.onStartTimeChangeClick()}"
                android:text="@string/set_time"
                android:textColor="@color/theme_color_1"
                android:textStyle="bold"
                app:cornerRadius="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialButton"
                app:layout_constraintTop_toTopOf="@+id/materialButton" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                android:background="@color/theme_color_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/end_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{viewModel.endDate}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/materialButton3"
                app:layout_constraintStart_toStartOf="@+id/materialButton3"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="02-09-2011" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{viewModel.endTime}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/materialButton4"
                app:layout_constraintStart_toStartOf="@+id/materialButton4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="09:31" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton3"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/theme_color_2"
                android:onClick="@{() -> viewModel.onEndDateChangeClick()}"
                android:text="@string/set_date"
                android:textColor="@color/theme_color_1"
                android:textStyle="bold"
                app:cornerRadius="14dp"
                app:layout_constraintEnd_toStartOf="@+id/materialButton4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton4"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/theme_color_2"
                android:onClick="@{() -> viewModel.onEndTimeChangeClick()}"
                android:text="@string/set_time"
                android:textColor="@color/theme_color_1"
                android:textStyle="bold"
                app:cornerRadius="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialButton3"
                app:layout_constraintTop_toTopOf="@+id/materialButton3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_manually_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/theme_color_2"
                android:onClick="@{() -> viewModel.onDoneButtonClicked()}"
                android:text="@string/done"
                android:textColor="@color/theme_color_1"
                android:textStyle="bold"
                app:cornerRadius="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>